tests/schemas/error/008_missing_optional_inner_type.fcp
version: "3"

struct S1 {
    field1 @0 : Optional[MissingType],
}
